--- a/_config.yml
+++ b/_config.yml
@@ -13,17 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Androdes
+email: info@androdes.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    The First Cinematic Electronic Music Experience
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://www.androdes.com" # the base hostname & protocol for your site
+enforce_ssl: www.androdes.com
+twitter_username: iamSARTORY
 
 # Build settings
 markdown: kramdown
-theme: minima
